Fix style too dark for shortcuts list

--- a/frontend/app/styles/_variables.scss
+++ b/frontend/app/styles/_variables.scss
@@ -39,7 +39,7 @@ $primary-dark: color.adjust(#6024ec, $lightness: -10%);
 	--bg-color: #fff;
 	--bg-contrast: #F1F6FD;
 	--bg-contrast-2: #e2ebfd;
-	--bg-ui: rgba(8, 8, 8, 0.05);
+	--bg-ui: rgba(8, 8, 8, 0.03);
 	--selection-color: #cbd4dd;
 	--font-color: #3c4450;
 	--font-color-dark: #3c3b3d;
